# QA_guru_python_18api

./: .gitignore  pyproject.toml
api/: api.py
tests/: conftest.py  test_demo.py
ui/: cart.py
utils/: utils.py
